[package]
name = "cassandra-migration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cassandra-protocol = "1.0.0"
cdrs = "2.3.3"
cdrs-tokio = "6.0.0"
cdrs-tokio-helpers-derive = "3.2.0"
tokio = { version = "1.17.0" }
tokio-stream = "0.1.8"
uuid = { version = "0.8.2", features = ["v1"] }
futures = "0.3.21"
async-stream = "0.3.2"
futures-core = "0.3.21"
args = "2.2.0"
getopts = "0.2.21"
itertools = "0.10.3"
chrono = "0.4.19"